--- a/index.html
+++ b/index.html
@@ -40,7 +40,47 @@
                 <button class="btn__login">Log In</button>
             </div>
         </div>
-
     </header>
+
+    <div class="main-container">
+        <div class="sidebar">
+            <div class="sidebar__header">
+                <h2>Your Library</h2>
+                <div class="sidebar__plus">
+                    <i class="fa-solid fa-plus"></i>
+                    <div class="sidebar__plus--btn sidebar__btn--create">
+                        <i class="fa-solid fa-music"></i>
+                        Create a new playlist
+                    </div>
+                </div>
+            </div>
+
+            <div class="sidebar__section">
+                <h2 class="sidebar__title">Create your first playlist</h2>
+                <p class="sidebar__text">It's easy, we'll help you</p>
+                <button class="sidebar__btn sidebar__btn--create">Create playlist</button>
+            </div>
+
+            <div class="sidebar__section">
+                <h2 class="sidebar__title">Let's find some podcasts to follow</h2>
+                <p class="sidebar__text">We'll keep you updated on new episodes</p>
+                <button class="sidebar__btn sidebar__btn--browse">Browse podcasts</button>
+            </div>
+
+            <footer class="sidebar__footer">
+                <a href="#">Legal</a>
+                <a href="#">Safety & Privacy Center</a>
+                <a href="#">Privacy Policy</a>
+                <a href="#">Cookies</a>
+                <a href="#">About Ads</a>
+                <a href="#">Accessibility</a>
+            </footer>
+        </div>
+        <div class="main-content">
+            
+        </div>
+    </div>
+
+    <script src="main.js"></script>
 </body>
 </html>
