design list musics

--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
             </div>
 
             <div class="sidebar__section">
-                <h2 class="sidebar__title">Create your first playlist</h2>
-                <p class="sidebar__text">It's easy, we'll help you</p>
-                <button class="sidebar__btn sidebar__btn--create">Create playlist</button>
+                <h2 class="sidebar__section--title">Create your first playlist</h2>
+                <p class="sidebar__section--text">It's easy, we'll help you</p>
+                <button class="sidebar__section--btn sidebar__btn--create">Create playlist</button>
             </div>
 
             <div class="sidebar__section">
-                <h2 class="sidebar__title">Let's find some podcasts to follow</h2>
-                <p class="sidebar__text">We'll keep you updated on new episodes</p>
-                <button class="sidebar__btn sidebar__btn--browse">Browse podcasts</button>
+                <h2 class="sidebar__section--title">Let's find some podcasts to follow</h2>
+                <p class="sidebar__section--text">We'll keep you updated on new episodes</p>
+                <button class="sidebar__section--btn sidebar__btn--browse">Browse podcasts</button>
             </div>
 
             <footer class="sidebar__footer">
@@ -77,8 +77,279 @@
             </footer>
         </div>
         <div class="main-content">
+            <div class="section">
+                <div class="section__head">
+                    <h2 class="section__title">Trending songs</h2>
+                    <div class="section__show">
+                        <a href="#">Show all</a>
+                    </div>
+                </div>
+                <div class="section__content">
+                    <ul class="section__content--container">
+                        <li class="section__content--item">
+                            <div class="section__item--background" style="background-image: url(./assets/image/image1.jpg);"></div>
+                            <h2 class="section__item--title">Name Song</h2>
+                            <div class="section__item--author">
+                                <p>LowG, </p>
+                                <p>SonTungMTP</p>
+                            </div>
+                            <div class="section__item--play">
+                                <i class="fa-solid fa-play"></i>
+                            </div>
+                        </li>
+                        <li class="section__content--item">
+                            <div class="section__item--background" style="background-image: url(./assets/image/image1.jpg);"></div>
+                            <h2 class="section__item--title">Name Song</h2>
+                            <div class="section__item--author">
+                                <p>LowG</p>
+                            </div>
+                            <div class="section__item--play">
+                                <i class="fa-solid fa-play"></i>
+                            </div>
+                        </li>
+                        <li class="section__content--item">
+                            <div class="section__item--background" style="background-image: url(./assets/image/image1.jpg);"></div>
+                            <h2 class="section__item--title">Name Song</h2>
+                            <div class="section__item--author">
+                                <p>LowG</p>
+                            </div>
+                            <div class="section__item--play">
+                                <i class="fa-solid fa-play"></i>
+                            </div>
+                        </li>
+                        <li class="section__content--item">
+                            <div class="section__item--background" style="background-image: url(./assets/image/image1.jpg);"></div>
+                            <h2 class="section__item--title">Name Song</h2>
+                            <div class="section__item--author">
+                                <p>LowG</p>
+                            </div>
+                            <div class="section__item--play">
+                                <i class="fa-solid fa-play"></i>
+                            </div>
+                        </li>
+                    </ul>
+                    <div class="section__right active">
+                        <i class="fa-solid fa-greater-than"></i>
+                    </div>
+                    <div class="section__left">
+                        <i class="fa-solid fa-less-than"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="section">
+                <div class="section__head">
+                    <h2 class="section__title">Popular artists</h2>
+                    <div class="section__show">
+                        <a href="#">Show all</a>
+                    </div>
+                </div>
+                <div class="section__content">
+                    <ul class="section__content--container">
+                        <li class="section__content--item">
+                            <div class="section__item--background" style="background-image: url(./assets/image/image1.jpg);"></div>
+                            <h2 class="section__item--title">Name Song</h2>
+                            <div class="section__item--author">
+                                <p>LowG</p>
+                            </div>
+                            <div class="section__item--play">
+                                <i class="fa-solid fa-play"></i>
+                            </div>
+                        </li>
+                        <li class="section__content--item">
+                            <div class="section__item--background" style="background-image: url(./assets/image/image1.jpg);"></div>
+                            <h2 class="section__item--title">Name Song</h2>
+                            <div class="section__item--author">
+                                <p>LowG</p>
+                            </div>
+                            <div class="section__item--play">
+                                <i class="fa-solid fa-play"></i>
+                            </div>
+                        </li>
+                        <li class="section__content--item">
+                            <div class="section__item--background" style="background-image: url(./assets/image/image1.jpg);"></div>
+                            <h2 class="section__item--title">Name Song</h2>
+                            <div class="section__item--author">
+                                <p>LowG</p>
+                            </div>
+                            <div class="section__item--play">
+                                <i class="fa-solid fa-play"></i>
+                            </div>
+                        </li>
+                        <li class="section__content--item">
+                            <div class="section__item--background" style="background-image: url(./assets/image/image1.jpg);"></div>
+                            <h2 class="section__item--title">Name Song</h2>
+                            <div class="section__item--author">
+                                <p>LowG</p>
+                            </div>
+                            <div class="section__item--play">
+                                <i class="fa-solid fa-play"></i>
+                            </div>
+                        </li>
+                    </ul>
+                    <div class="section__right">
+                        <i class="fa-solid fa-greater-than"></i>
+                    </div>
+                    <div class="section__left">
+                        <i class="fa-solid fa-less-than"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="section">
+                <div class="section__head">
+                    <h2 class="section__title">Popular albums and singles</h2>
+                    <div class="section__show">
+                        <a href="#">Show all</a>
+                    </div>
+                </div>
+                <div class="section__content">
+                    <ul class="section__content--container">
+                        <li class="section__content--item">
+                            <div class="section__item--background" style="background-image: url(./assets/image/image1.jpg);"></div>
+                            <h2 class="section__item--title">Name Song</h2>
+                            <div class="section__item--author">
+                                <p>LowG</p>
+                            </div>
+                            <div class="section__item--play">
+                                <i class="fa-solid fa-play"></i>
+                            </div>
+                        </li>
+                        <li class="section__content--item">
+                            <div class="section__item--background" style="background-image: url(./assets/image/image1.jpg);"></div>
+                            <h2 class="section__item--title">Name Song</h2>
+                            <div class="section__item--author">
+                                <p>LowG</p>
+                            </div>
+                            <div class="section__item--play">
+                                <i class="fa-solid fa-play"></i>
+                            </div>
+                        </li>
+                        <li class="section__content--item">
+                            <div class="section__item--background" style="background-image: url(./assets/image/image1.jpg);"></div>
+                            <h2 class="section__item--title">Name Song</h2>
+                            <div class="section__item--author">
+                                <p>LowG</p>
+                            </div>
+                            <div class="section__item--play">
+                                <i class="fa-solid fa-play"></i>
+                            </div>
+                        </li>
+                        <li class="section__content--item">
+                            <div class="section__item--background" style="background-image: url(./assets/image/image1.jpg);"></div>
+                            <h2 class="section__item--title">Name Song</h2>
+                            <div class="section__item--author">
+                                <p>LowG</p>
+                            </div>
+                            <div class="section__item--play">
+                                <i class="fa-solid fa-play"></i>
+                            </div>
+                        </li>
+                    </ul>
+                    <div class="section__right">
+                        <i class="fa-solid fa-greater-than"></i>
+                    </div>
+                    <div class="section__left">
+                        <i class="fa-solid fa-less-than"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="section">
+                <div class="section__head">
+                    <h2 class="section__title">Popular radio</h2>
+                    <div class="section__show">
+                        <a href="#">Show all</a>
+                    </div>
+                </div>
+                <div class="section__content">
+                    <ul class="section__content--container">
+                        <li class="section__content--item">
+                            <div class="section__item--background" style="background-image: url(./assets/image/image1.jpg);"></div>
+                            <h2 class="section__item--title">Name Song</h2>
+                            <div class="section__item--author">
+                                <p>LowG</p>
+                            </div>
+                            <div class="section__item--play">
+                                <i class="fa-solid fa-play"></i>
+                            </div>
+                        </li>
+                        <li class="section__content--item">
+                            <div class="section__item--background" style="background-image: url(./assets/image/image1.jpg);"></div>
+                            <h2 class="section__item--title">Name Song</h2>
+                            <div class="section__item--author">
+                                <p>LowG</p>
+                            </div>
+                            <div class="section__item--play">
+                                <i class="fa-solid fa-play"></i>
+                            </div>
+                        </li>
+                        <li class="section__content--item">
+                            <div class="section__item--background" style="background-image: url(./assets/image/image1.jpg);"></div>
+                            <h2 class="section__item--title">Name Song</h2>
+                            <div class="section__item--author">
+                                <p>LowG</p>
+                            </div>
+                            <div class="section__item--play">
+                                <i class="fa-solid fa-play"></i>
+                            </div>
+                        </li>
+                        <li class="section__content--item">
+                            <div class="section__item--background" style="background-image: url(./assets/image/image1.jpg);"></div>
+                            <h2 class="section__item--title">Name Song</h2>
+                            <div class="section__item--author">
+                                <p>LowG</p>
+                            </div>
+                            <div class="section__item--play">
+                                <i class="fa-solid fa-play"></i>
+                            </div>
+                        </li>
+                    </ul>
+                    <div class="section__right">
+                        <i class="fa-solid fa-greater-than"></i>
+                    </div>
+                    <div class="section__left">
+                        <i class="fa-solid fa-less-than"></i>
+                    </div>
+                </div>
+            </div>
             
+            <footer class="main__footer">
+                <div class="footer__container">
+                    <h2 class="footer__title">Company</h2>
+                    <ul class="footer__content">
+                        <li class="footer__item">About</li>
+                        <li class="footer__item">Jobs</li>
+                        <li class="footer__item">For the Record</li>
+                    </ul>
+                </div>
+                <div class="footer__container">
+                    <h2 class="footer__title">Communities</h2>
+                    <ul class="footer__content">
+                        <li class="footer__item">For Artists</li>
+                        <li class="footer__item">Developers</li>
+                        <li class="footer__item">Advertising</li>
+                        <li class="footer__item">Investors</li>
+                        <li class="footer__item">Vendors</li>
+                    </ul>
+                </div>
+                <div class="footer__container">
+                    <h2 class="footer__title">Useful links</h2>
+                    <ul class="footer__content">
+                        <li class="footer__item">Support</li>
+                        <li class="footer__item">Free Mobile App</li>
+                        <li class="footer__item">Popular by Country</li>
+                        <li class="footer__item">Import your music</li>
+                    </ul>
+                </div>
+                <div class="footer__container">
+                    <h2 class="footer__title">Spotify Plans</h2>
+                    <ul class="footer__content">
+                        <li class="footer__item">Premium Individual</li>
+                        <li class="footer__item">Premium Student</li>
+                        <li class="footer__item">Spotify Free</li>
+                    </ul>
+                </div>
+            </footer>
         </div>
+
     </div>
 
     <script src="main.js"></script>
