--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./assets/src/css/index.css">
+    <link rel="stylesheet" href="./assets/src/css/base.css">
+    <link rel="stylesheet" href="./assets/src/css/layout.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
@@ -352,6 +354,7 @@
 
     </div>
 
-    <script src="main.js"></script>
+    <script src="./assets/src/js/main.js"></script>
+    <script src="./assets/src/js/index.js"></script>
 </body>
 </html>
