--- a/play.html
+++ b/play.html
@@ -173,11 +173,11 @@
                 <div class="player__play--repeat"><i class="fa-solid fa-repeat"></i></div>
             </div>
             <div class="player__play--progress">
-                <span id="player__progress--current">0:00</span>
+                <span class="player__progress--current">0:00</span>
                 <div class="player__progress--bar">
                     <div class="progress"></div>
                 </div>
-                <span id="player__progress--duration">3:25</span>
+                <span class="player__progress--duration">3:25</span>
             </div>
         </div>
         <div class="player__tool">
