design tool bar

--- a/play.html
+++ b/play.html
@@ -181,10 +181,16 @@
             </div>
         </div>
         <div class="player__tool">
-            <div class="player__tool--lyric"></div>
-            <div class="player__tool--queue"></div>
-            <div class="player__tool--connect"></div>
-            <div class="player__tool--volume"></div>
+            <div class="player__tool--lyric"><i class="fa-solid fa-music"></i></div>
+            <div class="player__tool--queue"><i class="fa-solid fa-bars-progress"></i></div>
+            <div class="player__tool--connect"><i class="fa-solid fa-mobile"></i></div>
+            <div class="player__tool--volume">
+                <i class="fa-solid fa-volume-low"></i>
+                <div class="player__volume--bar">
+                    <div class="volume"></div>
+                </div>
+                <!-- <input type="range" id="volume" min="0" max="1" step="0.01" value="1"> -->
+            </div>
         </div>
     </div>
 
